# causal-inference-notes

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
quarto/: _quarto.yml  cheatsheet_01_foundations.qmd  cheatsheet_02_core_methods.qmd  cheatsheet_03_advanced_methods.qmd  cheatsheet_04_decision_guide.qmd  index.qmd  lab1_randomized_experiments.qmd  lab2_matching.qmd  lab3_difference_in_differences.qmd  lab4_instrumental_variables.qmd  lab5_regression_discontinuity.qmd  midterm_covid_curfew_evaluation.qmd
