[project]
name = "causal-inference-notes"
version = "0.1.0"
description = "Applied causal inference techniques from an Economics Masters course (EC963)"
authors = [{ name = "Gavin Qu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "linearmodels",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "ruff",
]
